fixed a line break on mobile

--- a/src/client/styles/scss/_comment_growi.scss
+++ b/src/client/styles/scss/_comment_growi.scss
@@ -48,6 +48,12 @@
     }
   }
 
+  .page-comment-writer {
+    @include media-breakpoint-down(xs) {
+      height: 50px;
+    }
+  }
+
   .page-comment {
     position: relative;
 
